refactor: Implement user and account relay services for improved message publishing and event handling

--- a/src/app/pages/messages/messages.component.html
+++ b/src/app/pages/messages/messages.component.html
@@ -140,9 +140,8 @@
           </mat-menu>
 
         </div>
-      </div>
-      <!-- Messages -->
-      <div class="messages-wrapper">
+      </div>      <!-- Messages -->
+      <div class="messages-wrapper" #messagesWrapper>
         @if (isLoading()) {
         <div class="loading-messages">
           <mat-spinner diameter="40"></mat-spinner>
